# ChangeLog for sci-biology/embassy-vienna
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-biology/embassy-vienna/ChangeLog,v 1.8 2010/01/15 22:47:16 fauli Exp $

  15 Jan 2010; Christian Faulhammer <fauli@gentoo.org>
  embassy-vienna-1.7.2-r1.ebuild:
  Transfer Prefix keywords

  01 Sep 2009; Olivier Fisette <ribosome@gentoo.org> metadata.xml:
  Giving up maintainership of this package.

*embassy-vienna-1.7.2-r1 (01 Sep 2009)

  01 Sep 2009; Olivier Fisette <ribosome@gentoo.org>
  +embassy-vienna-1.7.2-r1.ebuild:
  Updated version for EMBASSY 6.1.0.

  01 Sep 2009; Olivier Fisette <ribosome@gentoo.org>
  embassy-vienna-1.7.2.ebuild:
  Stabilised on amd64 and x86.

  27 Aug 2008; Olivier Fisette <ribosome@gentoo.org>
  -embassy-vienna-1.6.ebuild:
  Pruning version that will never be stabilised.

*embassy-vienna-1.7.2 (27 Aug 2008)

  27 Aug 2008; Olivier Fisette <ribosome@gentoo.org>
  +embassy-vienna-1.7.2.ebuild:
  New upstream version/package for EMBASSY 6.0.1.

  27 Aug 2008; Olivier Fisette <ribosome@gentoo.org>
  embassy-vienna-1.6.ebuild:
  Fixed description.

*embassy-vienna-1.6 (18 Jul 2007)

  18 Jul 2007; Olivier Fisette <ribosome@gentoo.org>
  +embassy-vienna-1.6.ebuild:
  Initial import.
